[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overlayforge"
version = "0.1.0"
description = "Local-first overlay preset starter"
requires-python = ">=3.11"

[project.scripts]
overlayforge = "overlayforge.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
